fix IE storefront bug and removed old css

--- a/app/assets/stylesheets/partials/modules/_storefront.scss
+++ b/app/assets/stylesheets/partials/modules/_storefront.scss
@@ -134,9 +134,6 @@
     border-color: $color-grey-med-3;
     border-width: 1px 0;
 
-    /* When they're 'Featured items', 'Store hours' are visible and non JS users */
-    .no-js & {border-bottom: 0;}
-
     /* Allow store link to be positioned over to the far right at this breakpoint */
     @include respond-min($ipad-portrait) {
       position: relative;
@@ -224,10 +221,15 @@
       }
     }
 
+  /* Featured items */
+  .storefront__featured {
+    border-top: 1px solid $color-grey-med-3;
+
+    &:last-child {border-top: none;}
+  }
+
     /* Shopping hours */
     .storefront__featured--hours {
-      border-bottom: 1px solid $color-grey-med-3;
-
       /* Need to shorten the day at this breakpoint range due to lack of real estate */
       /* Note: have to use `!important` keyword here to override the 'Hide' helper class */
       @include respond-range($ipad-landscape, $desk-lrg) {
