--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -25,7 +25,6 @@
     </div>
   </div>
 
-
   <%# One section per content type %>
   <% @search.results.each_with_index do |(kind, results), index| %>
     <section class="<%= 'divider divider--lrg' unless index == @search.results.length - 1 %>" aria-labelledby="<%= kind %>">
@@ -36,63 +35,70 @@
           <%= kind.titlecase %>
         </h2>
 
-        <%#// List of links to categories %>
+        <%# List of links to categories %>
         <nav role="navigation">
           <ul class="horiz-list horiz-list--spacing-half horiz-list--spacing-half-wrap txt-formatted__list-unstyled">
-            <% results.each do |result| %>
-              <% if result.attributes.category.present? %><li>
+            <% results.each do |result| %><!--
+           --><% if result.attributes.category.present? %><li>
                   <%= link_to(build_url(@centre, kind, result[:attributes]), class: 'btn btn--main btn--main-white btn--main-compact-sides btn--main-max-width') do %>
                     <span class="txt-truncate">
                       <%= highlight(result[:display], @search.term,  highlighter: '<strong>\1</strong>') %>
                     </span>
                   <% end %>
-                </li><% end %>
-            <% end %>
+                </li><% end %><!--
+           --><% end %>
           </ul>
         </nav>
+        <%#// List of links to categories %>
 
-        <%#// Product results need different html %>
+        <%# Product results need different html %>
         <% if kind != 'products' %>
 
-          <%#// List of links to storefronts %>
+          <%# List of links to storefronts %>
           <%if has_result_type?(results, 'store') %>
             <h3 class="mrg-base-and-half-top">All <%= kind %> matching "<strong><%= @search.term =%></strong>"</h3>
 
             <nav role="navigation">
               <ul class="horiz-list horiz-list--spacing-half horiz-list--spacing-half-wrap txt-formatted__list-unstyled">
-                <% results_by_type(results, 'store').each do |result| %>
-                  <li>
-                    <%= link_to highlight(result[:display], @search.term,  highlighter: '<strong>\1</strong>'), build_url(@centre, kind, result[:attributes]), class: 'btn btn--main btn--main-white btn--main-compact-sides' %>
-                  </li>
-                <% end %>
+                <% results_by_type(results, 'store').each do |result| %><li>
+                    <%= link_to(build_url(@centre, kind, result[:attributes]), class: 'btn btn--main btn--main-white btn--main-compact-sides btn--main-max-width') do %>
+                    <span class="txt-truncate">
+                      <%= highlight(result[:display], @search.term,  highlighter: '<strong>\1</strong>') %>
+                    </span>
+                  <% end %>
+                  </li><% end %>
               </ul>
             </nav>
           <% end %>
+          <%#// List of links to storefronts %>
 
         <% else %>
 
-          <%#// List of links to product brands %>
-          <%if has_result_type?(results, 'product_brand') %>
+          <%# List of links to product brands %>
+          <% if has_result_type?(results, 'product_brand') %>
 
             <h3 class="mrg-base-and-half-top">All brands matching "<strong><%= @search.term =%></strong>"</h3>
 
             <nav role="navigation">
               <ul class="horiz-list horiz-list--spacing-half horiz-list--spacing-half-wrap txt-formatted__list-unstyled">
-
-
-                <% results_by_type(results, 'product_brand').each do |result| %>
-                  <li>
-                    <%= link_to highlight(result[:display], @search.term,  highlighter: '<strong>\1</strong>'), build_url(@centre, kind, result[:attributes]), class: 'btn btn--main btn--main-white btn--main-compact-sides' %>
-                  </li>
-                <% end %>
+                <% results_by_type(results, 'product_brand').each do |result| %><li>
+                    <%= link_to(build_url(@centre, kind, result[:attributes]), class: 'btn btn--main btn--main-white btn--main-compact-sides btn--main-max-width') do %>
+                    <span class="txt-truncate">
+                      <%= highlight(result[:display], @search.term,  highlighter: '<strong>\1</strong>') %>
+                    </span>
+                  <% end %>
+                </li><% end %>
               </ul>
             </nav>
 
           <% end %>
+          <%#// List of links to product brands %>
 
           <h3 class="mrg-base-and-half-top mrg-base js-product-results-hdr">All <%= kind.pluralize %> matching "<strong><%= @search.term =%></strong>"</h3>
 
         <% end %>
+        <%#// Product results need different html %>
+
       </div>
       <% if kind == 'products' %>
         <div class="hide-fully js-product-results-container">
