--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -24,6 +24,7 @@
       <span class="nav-contextual__clip__overlay icon icon--arrow-right icon--mega icon--flush-top js-nav-contextual-clip-overlay" aria-hidden="true"></span>
     </div>
   </div>
+  <%#// List of anchors to each search result type %>
 
   <%# One section per content type %>
   <% @search.results.each_with_index do |(kind, results), index| %>
