--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -16,7 +16,7 @@
         <ul class="nav-contextual__list horiz-list js-nav-contextual-list">
           <% @search.results.each do |kind, results| %>
             <% if results.present? %><li>
-              <a href="#<%= kind %>"><%= kind.titlecase %> (<span class="js-<%= kind.singularize %>-result-count"><%= results.length %></span>)</a>
+              <a href="#<%= kind %>"><%= kind.titlecase %> (<span class="js-<%= kind.singularize %>-result-count"><%= number_of_results(results) %></span>)</a>
             <% end %>
           </li><% end %>
         </ul>
@@ -42,10 +42,8 @@
             <ul class="horiz-list horiz-list--spacing-half horiz-list--spacing-half-wrap txt-formatted__list-unstyled">
               <% results.each do |result| %><!--
              --><% if result.attributes.category.present? %><li>
-                    <%= link_to(build_url(@centre, kind, result[:attributes]), class: 'btn btn--main btn--main-white btn--main-compact-sides btn--main-max-width') do %>
-                      <span class="txt-truncate">
-                        <%= highlight(result[:display], @search.term,  highlighter: '<strong>\1</strong>') %>
-                      </span>
+                    <%= link_to(build_url(@centre, kind, result[:attributes]), class: 'btn btn--main btn--main-white btn--main-compact-sides') do %>
+                      <%= highlight(result[:display], @search.term,  highlighter: '<strong>\1</strong>') %>
                     <% end %>
                   </li><% end %><!--
              --><% end %>
@@ -68,10 +66,8 @@
             <nav role="navigation">
               <ul class="horiz-list horiz-list--spacing-half horiz-list--spacing-half-wrap txt-formatted__list-unstyled">
                 <% results.each do |result| %><li>
-                    <%= link_to(build_url(@centre, kind, result[:attributes]), class: 'btn btn--main btn--main-white btn--main-compact-sides btn--main-max-width') do %>
-                    <span class="txt-truncate">
+                    <%= link_to(build_url(@centre, kind, result[:attributes]), class: 'btn btn--main btn--main-white btn--main-compact-sides') do %>
                       <%= highlight(result[:display], @search.term,  highlighter: '<strong>\1</strong>') %>
-                    </span>
                   <% end %>
                   </li><% end %>
               </ul>
