--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -61,22 +61,22 @@
 					<% if social_media.present? && header_hero? %>
 						<ul class="nav-social-follow horiz-list">
 							<% if @centre.facebook.present? %>
-								<li><a href="<%= @centre.facebook %>" target="_blank" rel="external" target="_blank"><span class="hide-visually">Facebook</span><span class="icon icon--facebook icon--flush-top" aria-hidden="true"></span></a></li>
+								<li><a href="<%= @centre.facebook %>" target="_blank" rel="external"><span class="hide-visually">Facebook</span><span class="icon icon--facebook icon--flush-top" aria-hidden="true"></span></a></li>
 							<% end %>
 							<% if @centre.twitter.present? %>
-								<li><a href="<%= @centre.twitter %>" target="_blank" rel="external" target="_blank"><span class="hide-visually">Twitter</span><span class="icon icon--twitter icon--flush-top" aria-hidden="true"></span></a></li>
+								<li><a href="<%= @centre.twitter %>" target="_blank" rel="external"><span class="hide-visually">Twitter</span><span class="icon icon--twitter icon--flush-top" aria-hidden="true"></span></a></li>
 							<% end %>
 							<% if @centre.instagram.present? %>
-								<li><a href="<%= @centre.instagram %>" target="_blank" rel="external" target="_blank"><span class="hide-visually">Instagram</span><span class="icon icon--instagram icon--flush-top" aria-hidden="true"></span></a></li>
+								<li><a href="<%= @centre.instagram %>" target="_blank" rel="external"><span class="hide-visually">Instagram</span><span class="icon icon--instagram icon--flush-top" aria-hidden="true"></span></a></li>
 							<% end %>
 							<% if @centre.pinterest.present? %>
-								<li><a href="<%= @centre.pinterest %>" target="_blank" rel="external" target="_blank"><span class="hide-visually">Pinterest</span><span class="icon icon--pinterest icon--flush-top" aria-hidden="true"></span></a></li>
+								<li><a href="<%= @centre.pinterest %>" target="_blank" rel="external"><span class="hide-visually">Pinterest</span><span class="icon icon--pinterest icon--flush-top" aria-hidden="true"></span></a></li>
 							<% end %>
 							<% if @centre.youtube.present? %>
-								<li><a href="<%= @centre.youtube %>" target="_blank" rel="external" target="_blank"><span class="hide-visually">YouTube</span><span class="icon icon--youtube icon--flush-top" aria-hidden="true"></span></a></li>
+								<li><a href="<%= @centre.youtube %>" target="_blank" rel="external"><span class="hide-visually">YouTube</span><span class="icon icon--youtube icon--flush-top" aria-hidden="true"></span></a></li>
 							<% end %>
 							<% if @centre.google_plus.present? %>
-								<li><a href="<%= @centre.google_plus %>" target="_blank" rel="external" target="_blank"><span class="hide-visually">Google Plus</span><span class="icon icon--google-plus icon--flush-top" aria-hidden="true"></span></a></li>
+								<li><a href="<%= @centre.google_plus %>" target="_blank" rel="external"><span class="hide-visually">Google Plus</span><span class="icon icon--google-plus icon--flush-top" aria-hidden="true"></span></a></li>
 							<% end %>
 						</ul>
 					<% end %>
@@ -96,22 +96,22 @@
 					<% if social_media.present? %>
 						<ul class="nav-social-follow horiz-list">
 							<% if @centre.facebook.present? %>
-								<li><a href="<%= @centre.facebook %>" target="_blank" rel="external" target="_blank"><span class="hide-visually">Facebook</span><span class="icon icon--facebook icon--xlrg icon--flush-top" aria-hidden="true"></span></a></li>
+								<li><a href="<%= @centre.facebook %>" target="_blank" rel="external"><span class="hide-visually">Facebook</span><span class="icon icon--facebook icon--xlrg icon--flush-top" aria-hidden="true"></span></a></li>
 							<% end %>
 							<% if @centre.twitter.present? %>
-								<li><a href="<%= @centre.twitter %>" target="_blank" rel="external" target="_blank"><span class="hide-visually">Twitter</span><span class="icon icon--twitter icon--xlrg icon--flush-top" aria-hidden="true"></span></a></li>
+								<li><a href="<%= @centre.twitter %>" target="_blank" rel="external"><span class="hide-visually">Twitter</span><span class="icon icon--twitter icon--xlrg icon--flush-top" aria-hidden="true"></span></a></li>
 							<% end %>
 							<% if @centre.instagram.present? %>
-								<li><a href="<%= @centre.instagram %>" target="_blank" rel="external" target="_blank"><span class="hide-visually">Instagram</span><span class="icon icon--instagram icon--xlrg icon--flush-top" aria-hidden="true"></span></a></li>
+								<li><a href="<%= @centre.instagram %>" target="_blank" rel="external"><span class="hide-visually">Instagram</span><span class="icon icon--instagram icon--xlrg icon--flush-top" aria-hidden="true"></span></a></li>
 							<% end %>
 							<% if @centre.pinterest.present? %>
-								<li><a href="<%= @centre.pinterest %>" target="_blank" rel="external" target="_blank"><span class="hide-visually">Pinterest</span><span class="icon icon--pinterest icon--xlrg icon--flush-top" aria-hidden="true"></span></a></li>
+								<li><a href="<%= @centre.pinterest %>" target="_blank" rel="external"><span class="hide-visually">Pinterest</span><span class="icon icon--pinterest icon--xlrg icon--flush-top" aria-hidden="true"></span></a></li>
 							<% end %>
 							<% if @centre.youtube.present? %>
-								<li><a href="<%= @centre.youtube %>" target="_blank" rel="external" target="_blank"><span class="hide-visually">YouTube</span><span class="icon icon--youtube icon--xlrg icon--flush-top" aria-hidden="true"></span></a></li>
+								<li><a href="<%= @centre.youtube %>" target="_blank" rel="external"><span class="hide-visually">YouTube</span><span class="icon icon--youtube icon--xlrg icon--flush-top" aria-hidden="true"></span></a></li>
 							<% end %>
 							<% if @centre.google_plus.present? %>
-								<li><a href="<%= @centre.google_plus %>" target="_blank" rel="external" target="_blank"><span class="hide-visually">Google Plus</span><span class="icon icon--google-plus icon--xlrg icon--flush-top" aria-hidden="true"></span></a></li>
+								<li><a href="<%= @centre.google_plus %>" target="_blank" rel="external"><span class="hide-visually">Google Plus</span><span class="icon icon--google-plus icon--xlrg icon--flush-top" aria-hidden="true"></span></a></li>
 							<% end %>
 						</ul>
 					<% end %>
