--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -176,7 +176,7 @@
 				<%# //Centre selector %>
 
 				<%# Shopping hours link %>
-	      <a href="<%= centre_hours_path( params[ :centre_id ] || params[ :id ] ) %>" target="_self" class="open-hours-link"><span class="icon icon--hours" aria-hidden="true"></span> <% if @centre_trading_hour.closed %><strong>Closed <% else %>Open <time datetime="<%= @centre_trading_hour.opening_time %>"><%= twelve_hour_format(@centre_trading_hour.opening_time) %></time> &#8211; <time datetime="<%= @centre_trading_hour.closing_time %>"><%= twelve_hour_format(@centre_trading_hour.closing_time) %></time><% end %> today</strong><span class="icon icon--arrow-right" aria-hidden="true"></span></a>
+	      <a href="<%= centre_hours_path( params[ :centre_id ] || params[ :id ] ) %>" target="_self" class="open-hours-link"><span class="icon icon--hours" aria-hidden="true"></span> <% if @centre_trading_hour.closed %><strong>Closed <% else %><strong>Open <time datetime="<%= @centre_trading_hour.opening_time %>"><%= twelve_hour_format(@centre_trading_hour.opening_time) %></time> &#8211; <time datetime="<%= @centre_trading_hour.closing_time %>"><%= twelve_hour_format(@centre_trading_hour.closing_time) %></time><% end %> today</strong><span class="icon icon--arrow-right" aria-hidden="true"></span></a>
 				<%# //Shopping hours link %>
 
 			</div>
