--- a/app/assets/stylesheets/partials/buttons/_main.scss
+++ b/app/assets/stylesheets/partials/buttons/_main.scss
@@ -12,7 +12,7 @@
   .btn--main-compact            - Compact - decrease padding
   .btn--main-compact-sides      - Compact - decrease left/right padding
   .btn--main-max-width          - Apply a maximum width, this is typically used when the `txt-truncate` helper is used on the button text
-  .btn--main-max-width-palm - Apply a maximum width for palm, this is typically used when the `txt-truncate` helper is used on the button text
+  .btn--main-max-width-palm     - Apply a maximum width for palm, this is typically used when the `txt-truncate` helper is used on the button text
   .btn--main-lrg                - Large - increase top/bottom padding
   .btn--main-arrow              - Arrow on the right
   .btn--main-toggle-checkbox    - Checkbox toggle
@@ -123,12 +123,8 @@
   .btn--main-max-width {@include to-rem(max-width, 186);}
 
   /* Modifier: apply a maximum width for palm, this is typically used when the `txt-truncate` helper is used on the button text */
-  .btn--main-max-width-palm {
-    @include to-rem(max-width, 186);
-
-    @include respond-min($non-palm) {
-      max-width: none;
-    }
+  @include respond-min($non-palm) {
+    .btn--main-max-width-palm {max-width: none;}
   }
 
 	/* Modifier: large - increase top/btm padding */
