--- a/app/views/curations/show.html.erb
+++ b/app/views/curations/show.html.erb
@@ -4,7 +4,7 @@
 <article class="product-curation" role="article">
 
   <%# 'Hero', 'More from retailers (non-palm)' and 'Pin board' %>
-  <div class="divider divider--lrg-non-palmx">
+  <div class="divider divider--palm">
     <div class="grid grid--gutter-half grid--mrg-half grid--non-linear">
 
       <%# 'Hero' and 'More from retailers (non-palm)' %>
