Adding full stop to session time sentance on movies detail

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -38,7 +38,7 @@
 <section class="detail-view__schedule island" aria-labelledby="session-times">
   <h2 class="detail-view__hdr-sub hn" id="session-times">Session Times</h2>
 
-  <p>Select a session to purchase tickets at <%= @cinema.name %></p>
+  <p>Select a session to purchase tickets at <%= @cinema.name %>.</p>
 
   <dl class="timeline">
     <% @movies_sessions_by_date.each do |date, sessions| %>
