--- a/app/views/centre_info/show.html.erb
+++ b/app/views/centre_info/show.html.erb
@@ -18,7 +18,7 @@
 <%# //Nav contextual %>
 
 <%# Divider %>
-<div class="divider divider--lrg">
+<div class="divider divider--dbl">
 
   <%# Text formatted %>
   <div class="txt-formatted" itemscope itemtype="http://schema.org/Organization">
