--- a/app/views/centre_service_details/show.html.erb
+++ b/app/views/centre_service_details/show.html.erb
@@ -1,5 +1,5 @@
 <%# Txt formatted and divider %>
-<div class="txt-formatted divider divider--lrg">
+<div class="txt-formatted divider divider--dbl">
 
   <h2>Concierge Services</h2>
 
