--- a/app/views/curations/_pagination.html.erb
+++ b/app/views/curations/_pagination.html.erb
@@ -1,5 +1,5 @@
 <%# Pager %>
-<section class="product-curation__pager divider divider--lrg-non-palm" aria-labelledby="curation-pager">
+<section class="product-curation__pager divider divider--dbl-non-palm" aria-labelledby="curation-pager">
   <h2 class="hide-visually" id="curation-pager">Pagination</h2>
   <nav class="pager pager--compact" role="navigation">
     <div class="pager__inner">
