Making modifiers consistent

--- a/app/assets/stylesheets/partials/abstractions/_flag.scss
+++ b/app/assets/stylesheets/partials/abstractions/_flag.scss
@@ -5,7 +5,7 @@
 /*
   Place any image- and text-like content side-by-side with vertical alignment.
 
-  .flag--shrink-wrap          - Shrink wrap.
+  .flag--shrink-wrap          - Shrink wrap
 
   Styleguide Flag
 */
