--- a/app/assets/stylesheets/partials/abstractions/_horizontal-list.scss
+++ b/app/assets/stylesheets/partials/abstractions/_horizontal-list.scss
@@ -5,16 +5,16 @@
 /*
   Make list items for `ul` and `ol` elements render horizontally.
 
-  .horiz-list--dividers          - With dividers.
-  .horiz-list--center            - Center align.
-  .horiz-list--fit               - Force the items to occupy 100% of the available width of its parent.
-  .horiz-list--comma             - Comma separated.
-  .horiz-list--slash             - Slash separated.
-  .horiz-list--spacing-base			 - Base spacing between list items.
-  .horiz-list--spacing-half      - Half spacing between list items.
-  .horiz-list--spacing-micro     - Micro spacing between list items.
-  .horiz-list--spacing-base-wrap - Base spacing below list items.
-  .horiz-list--spacing-half-wrap - Half spacing below list items.
+  .horiz-list--dividers          - With dividers
+  .horiz-list--center            - Center align
+  .horiz-list--fit               - Force the items to occupy 100% of the available width of its parent
+  .horiz-list--comma             - Comma separated
+  .horiz-list--slash             - Slash separated
+  .horiz-list--spacing-base			 - Base spacing between list items
+  .horiz-list--spacing-half      - Half spacing between list items
+  .horiz-list--spacing-micro     - Micro spacing between list items
+  .horiz-list--spacing-base-wrap - Base spacing below list items
+  .horiz-list--spacing-half-wrap - Half spacing below list items
 
   Styleguide Horizontal List
 */
