--- a/app/assets/stylesheets/partials/abstractions/_vertical-alignment.scss
+++ b/app/assets/stylesheets/partials/abstractions/_vertical-alignment.scss
@@ -5,7 +5,7 @@
 /*
   Vertically align an element within its parent via CSS `display: table`.
 
-  .vert-align--left         - Left alignment.
+  .vert-align--left         - Left alignment
 
   Styleguide Vertical Alignment
 */
