--- a/app/assets/stylesheets/partials/modules/_pin-board.scss
+++ b/app/assets/stylesheets/partials/modules/_pin-board.scss
@@ -5,7 +5,7 @@
 /*
   Pin board container that holds all tiles.
 
-  .pin-board--curation    Curation pin board
+  .pin-board--curation    - Curation pin board
 
   Styleguide Pin Board
 */
