--- a/app/assets/stylesheets/partials/modules/_preloader.scss
+++ b/app/assets/stylesheets/partials/modules/_preloader.scss
@@ -5,7 +5,7 @@
 /*
   Provides feedback to the user letting them know that their action is being processed e.g. a form submission. It renders an animating spinner (light) but can also include a message with the spinner e.g. "Loading, please wait...".
 
-  .preloader--middle      - position the loader in the centre of its parent
+  .preloader--middle      - Position the loader in the centre of its parent
 
   Styleguide Preloader
 */
