--- a/app/assets/stylesheets/partials/modules/_tile.scss
+++ b/app/assets/stylesheets/partials/modules/_tile.scss
@@ -5,8 +5,8 @@
 /*
   Renders a tile for different types of content e.g. a 'Product', 'Deal', 'Event', etc. Mainly used in pin board module.
 
-  .tile--deals              Deals
-  .tile--fixed-img-height   Fix the tile image height
+  .tile--deals              - Deals
+  .tile--fixed-img-height   - Fix the tile image height
 
   Styleguide Tile
 */
