--- a/app/assets/stylesheets/partials/abstractions/_toggle-visibility.scss
+++ b/app/assets/stylesheets/partials/abstractions/_toggle-visibility.scss
@@ -5,7 +5,7 @@
 /*
 	Simply hiding/showing an element via a trigger powered by the 'Angular toggle visibility' directive.
 
-  .toggle-visibility--palm        - Only apply at palm.
+  .toggle-visibility--palm        - Only apply at palm
 
 	Styleguide Toggle Visibility
 */
