Adding double quotes around Microdata attrs for tiles

--- a/app/views/shared/tiles/_event.html.erb
+++ b/app/views/shared/tiles/_event.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :tile_attrs, 'itemprop=event itemscope itemtype=http://schema.org/Event' %>
+<%= content_for :tile_attrs, 'itemprop="event" itemscope itemtype="http://schema.org/Event"'.html_safe %>
 
 <%# Tile event image %>
 <div class="tile__image">
