--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -40,7 +40,7 @@
       <%# //Back to listing link %>
 
       <%# Store details %>
-      <div class="stores-maps__list-detail js-dynamic-height">
+      <div class="stores-maps__list-detail js-stores-dynamic-height">
 
         <article class="storefront" role="article">
 
