--- a/app/views/deals/index.html.erb
+++ b/app/views/deals/index.html.erb
@@ -12,9 +12,9 @@
 <% if @deals.blank? %>
 
   <%# No deals fallback message %>
-  <div class="no-content-fallback-msg">
+  <div class="fallback-msg fallback-msg--spacing-top">
     <p>
-      <span class="no-content-fallback-msg__icon icon icon--deals icon--flush-top" aria-hidden="true"></span>
+      <span class="fallback-msg__icon icon icon--deals icon--flush-top" aria-hidden="true"></span>
       <em class="h1">No deals at this centre</em>
       <span>See nearby centres</span>
     </p>
