--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,9 +1,9 @@
 <% if @movie_sessions.empty? %>
 
   <%# No Movies fallback message %>
-  <div class="no-content-fallback-msg no-content-fallback-msg--flush">
+  <div class="fallback-msg">
     <p>
-      <span class="no-content-fallback-msg__icon icon icon--video icon--flush-top" aria-hidden="true"></span>
+      <span class="fallback-msg__icon icon icon--video icon--flush-top" aria-hidden="true"></span>
       <em class="h1">No movies at this centre</em>
       <span>See nearby centres</span>
     </p>
