--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -3,7 +3,7 @@
 <% if @search.results.empty? %>
 
   <%#// TODO: no search results page %>
-  <div class="no-content-fallback-msg">
+  <div class="fallback-msg fallback-msg--spacing-top">
     <p><em class="h1">No search results</em></span></p>
   </div>
 <% else %>
