--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -214,9 +214,9 @@
         </dl>
 
         <%# No stores matching keyword filter message %>
-        <div class="no-content-fallback-msg no-content-fallback-msg--flush hide-fully js-stores-keyword-filter-no-results">
-          <p class="island">
-            <span class="no-content-fallback-msg__icon icon icon--store icon--flush-top" aria-hidden="true"></span>
+        <div class="fallback-msg island hide-fully js-stores-keyword-filter-no-results">
+          <p>
+            <span class="fallback-msg__icon icon icon--store icon--flush-top" aria-hidden="true"></span>
             <em class="h1">No Stores matching
               <span class="js-stores-keyword-filter-value"></span>
             </em>
