--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,9 +5,9 @@
 <% if @events.blank? %>
 
   <%# No events fallback message %>
-  <div class="no-content-fallback-msg">
+  <div class="fallback-msg fallback-msg--spacing-top">
     <p>
-      <span class="no-content-fallback-msg__icon icon icon--events icon--flush-top" aria-hidden="true"></span>
+      <span class="fallback-msg__icon icon icon--events icon--flush-top" aria-hidden="true"></span>
       <em class="h1">No events at this centre</em>
       <span>See nearby centres</span>
     </p>
