--- a/app/views/products/_products.html.erb
+++ b/app/views/products/_products.html.erb
@@ -1,9 +1,9 @@
 <% if @search.products.blank? %>
 
   <%# No product search results message %>
-  <div class="no-content-fallback-msg">
+  <div class="fallback-msg">
     <p role="status" aria-live="polite">
-      <span class="no-content-fallback-msg__icon icon icon--products icon--flush-top" aria-hidden="true"></span>
+      <span class="fallback-msg__icon icon icon--products icon--flush-top" aria-hidden="true"></span>
       <em class="h1">No products <% if params[:search_query] %> matching
         <span>"<%= params[:search_query] %>"</span>
         <% end %>
